# BMS

./: .gitignore  CMakeLists.txt  Main.qml  README.md  ads1256controller.cpp  ads1256controller.h  logdatabase.cpp  logdatabase.h  loglistmodel.cpp  main.cpp  samplesqlwriter.cpp  scalarekf.h  stm32.c
assets/icons/: README.md  icons.qrc
firmware/: stm32.c
include/: ads1256controller.h  crashlogger.h  loglistmodel.h  samplesqlwriter.h
installer/: BMS.iss
qml/: Main.qml
scripts/: generate_cutout_icon.ps1  generate_frame_based_icon.ps1  generate_icon.ps1  generate_outline_cutout_icon.ps1  import_icon_from_image.ps1  package.ps1
src/: ads1256controller.cpp  crashlogger.cpp  logdatabase.cpp  samplesqlwriter.cpp
